Sugati/src/objects/Facility__c.object
<CustomObject>
    <description>A list of central property facilities</description>
    <fields>
        <fullName>F_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>F_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>F_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bed Room</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Living Room</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Facility</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>F_Active__c</columns>
        <columns>F_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Facility Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Facilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>